--- a/900_Check_data.Rmd
+++ b/900_Check_data.Rmd
@@ -2,7 +2,16 @@
 title: "900 Check data"
 author: "DHJ"
 date: "5 5 2020"
-output: html_document
+output: 
+  github_document:
+    toc: true
+  html_document:
+    toc: true    
+    toc_float: true
+knit: (function(inputFile, encoding) {
+  rmarkdown::render(inputFile, encoding = encoding,
+  output_format = "all") })    
+
 ---
 
 ```
