--- a/900_Check_data.Rmd
+++ b/900_Check_data.Rmd
@@ -260,4 +260,44 @@ nrow(df4c)
 ```
 
 
+## 6. Climate  
+```{r}
 
+df_climate <- read_csv("https://github.com/JamesSample/icpw2/raw/master/thematic_report_2020/results/climate/cru_climate_timeseries_icpw_stns_1992-2016.csv")
+
+```
+
+### Plot 1  
+```{r}
+
+df_climate %>%
+  group_by(station_id, variable) %>%
+  summarise(mean = mean(value)) %>%
+  ggplot(aes(variable, mean)) + geom_boxplot()
+
+```
+
+### Plot 2
+```{r}
+df <- df_climate %>%
+  group_by(station_id, variable) %>%
+  summarise(mean = mean(value)) %>%
+  left_join(df3, by = "station_id")
+
+gg <- ggplot(df %>% filter(variable == "pre"),
+  aes(longitude, latitude)) +
+  annotation_map(my_map, fill = "lightgreen") +
+  geom_point(aes(color = mean))
+
+gg + 
+  scale_color_gradient2(low = "darkgreen", mid = "blue", high = "red")
+
+gg <- ggplot(df %>% filter(variable == "tmp"),
+  aes(longitude, latitude)) +
+  annotation_map(my_map, fill = "lightgreen") +
+  geom_point(aes(color = mean))
+
+gg + 
+  scale_color_gradient2(low = "darkgreen", mid = "blue", high = "red")
+
+```
