--- a/110_Create_season_adjusted_data.Rmd
+++ b/110_Create_season_adjusted_data.Rmd
@@ -2,7 +2,16 @@
 title: "110 Season-adjusted annual data"
 author: "DHJ"
 date: "7 5 2020"
-output: html_document
+output: 
+  github_document:
+    toc: true
+  html_document:
+    toc: true    
+    toc_float: true
+knit: (function(inputFile, encoding) {
+  rmarkdown::render(inputFile, encoding = encoding,
+  output_format = "all") })    
+
 ---
 
 
@@ -150,7 +159,7 @@ plot(m1)
 ### Seasonal pattern for all stations with at least 50 observations   
 I.e., we assume same pattern (on log scale) for all stations  
 A minute computing time or so  
-```{r}
+```{r, cache=TRUE}
 
 # Pick stations with n >= 50
 pick_stations <- df %>%
