--- a/130_Time_series_results.Rmd
+++ b/130_Time_series_results.Rmd
@@ -21,6 +21,7 @@ knit: (function(inputFile, encoding) {
 
 # All of tehse packages cn be loaded at once using library(tidyverse). (I just like to be specific.)
 library(dplyr)
+library(tidyr)
 library(purrr)
 library(lubridate)
 library(ggplot2)
@@ -28,45 +29,37 @@ library(forcats)
 library(mgcv)
 library(nlme)
 
+library(MuMIn)
+# install.packages("randomForest")
+library(randomForest)
+
+library(maps)
+my_map <- map_data("world")
+
+
 ```
 
 
 ## 2. Data
 ```{r}
 
-dat_annual_sel_TOC <- readRDS("Data/120_dat_annual_sel_TOC.rds")
-ts_model_list_with_TOC <- readRDS("Data/120_ts_model_list_with_TOC.rds")
+dat_annual_sel <- readRDS("Data/120_dat_annual_sel.rds")
+ts_model_list <- readRDS("Data/120_ts_model_list.rds")
 # ts_model_list_wout_TOC <- readRDS("Data/120_ts_model_list_wout_TOC.rds")
 
-```
-
-
-
-## 3. Extraxt results as data frames   
-Based on ts_model_list  
-
-```{r}
-ts_model_list <- ts_model_list_with_TOC
-```
-
-```{r}
-
-# Split data
-dat_annual_split <- dat_annual_sel_TOC %>%
-  filter(!is.na(TOC)) %>%
-  group_by(station_id) %>%
-  group_split()
-
-# Name the split data
-names(dat_annual_split) <- dat_annual_split %>% map_chr(~.$station_id[1])
+df_stations <- readRDS("Data/100_Stations.rds")
+df_deposition <- readRDS("Data/100_Deposition.rds")
+df_climate <- readRDS("Data/100_Climate.rds")
 
 ```
+
+
+
+## 3. Make 'result_list'     
 
 adjustment_ok
 ```{r}
 
-# Set names for result
-names(ts_model_list$result) <- names(dat_annual_split)
 
 # Which time series did not retun an error?
 model_ok <- ts_model_list$error %>% map_lgl(is.null)
@@ -76,227 +69,495 @@ table(model_ok)
 result_length <- ts_model_list$result %>% map_int(length)
 
 # Check contents of $result
-ts_model_list$result[[1]][1:3] %>% str(2)
+# $result[[1]][1:3] %>% str(2)
+
+result_list <- ts_model_list$result[model_ok]
 
 
 ```
 
-AIC
+
+## 4. Explote AIC values 
+All models:  
+  c("Time", "Dep", "P", "T", "P+T", "Dep+P", "Dep+T", "Dep+P+T", "Dep_vs_time", "P_vs_time", "T_vs_time")
+
+
+### Extract dAIC for NO3 models   
+Not including the last three  
 ```{r}
 
-get_gamm_anova_with_TOC <- function(model_list){
+model_labels <- 
+  c("Time", "Dep", "P", "T", "P_T", "Dep_P", "Dep_T", "Dep_P_T")
+
+
+get_anova <- function(model_list){
   anova(model_list[[1]]$lme, 
         model_list[[2]]$lme, 
         model_list[[3]]$lme,
+        model_list[[4]]$lme,
         model_list[[5]]$lme, 
         model_list[[6]]$lme, 
-        model_list[[7]]$lme
+        model_list[[7]]$lme,
+        model_list[[8]]$lme
         )
 }
-# ts_model_list$result[[1]] %>% str(1)
-# get_gamm_anova_with_TOC(ts_model_list$result[[1]])
 
-# FOR LATER
-# get_aic_wout_TOC <- function(model_list){
-#   aic <- get_gamm_anova_wout_TOC(model_list)$AIC %>% matrix(nrow = 1) %>% data.frame() 
-#   result <- data.frame(aic, NA, NA, NA)
-#   names(result) <- paste0("AIC_", c(1,2,3,5,6,7))
-#   result
-# }
-# get_aic_wout_TOC(ts_model_list$result[[1]])
 
-get_aic_with_TOC <- function(model_list){
-  result <- get_gamm_anova_with_TOC(model_list)$AIC %>% matrix(nrow = 1) %>% data.frame() 
-  aic4 <- AIC(model_list[[4]])
-  result <- data.frame(result[,1:3], aic4, result[,4:6])
-  names(result) <- paste0("AIC_", 1:7)
-  result
+# get_anova(result_list[[1]])
+
+get_aic <- function(model_list){
+  aic <- get_anova(model_list)$AIC
+  daic <- aic - min(aic)
+  df <- daic %>% matrix(nrow = 1) %>% data.frame() 
+  names(df) <- model_labels
+  data.frame(df, aic_min = min(aic), aic_best = which.min(aic))
 }
-# get_aic_with_TOC(ts_model_list$result[[1]])
 
-aic <- ts_model_list$result[model_ok] %>% map_df(get_aic_with_TOC, .id = "station_id")
+get_aic_without_time <- function(model_list){
+  aic <- get_anova(model_list)$AIC[-1]
+  daic <- aic - min(aic)
+  df <- daic %>% matrix(nrow = 1) %>% data.frame() 
+  names(df) <- model_labels[-1]
+  data.frame(df, aic_min = min(aic), aic_best = which.min(aic))
+}
 
-aic <- aic %>%
-  mutate(AIC_min = pmin(AIC_1, AIC_2, AIC_3, AIC_4, AIC_5, AIC_6, AIC_7),
-         dAIC_1 = AIC_1 - AIC_min,
-         dAIC_2 = AIC_2 - AIC_min,
-         dAIC_3 = AIC_3 - AIC_min,
-         dAIC_4 = AIC_4 - AIC_min,
-         dAIC_5 = AIC_5 - AIC_min,
-         dAIC_6 = AIC_6 - AIC_min,
-         dAIC_7 = AIC_7 - AIC_min)
+# get_aic(result_list[[1]])
 
-# best model 
-# Note hard-coded "9"
-aic <- aic %>%
-  mutate(AIC_best = apply(aic == 0, 1, which) - 9)
+daic <- result_list %>% map_df(get_aic, .id = "station_id")
+daic_without_time <- result_list %>% map_df(get_aic, .id = "station_id")
+
+
 
 ```
 
-p-values  
+### Show all AICs  
 ```{r}
 
-# ts_model_list$result[[1]] %>% str(2)
-# ts_model_list$result[[1]][[1]] %>% str(1)
-# summary(ts_model_list$result[[1]][[3]]$gam)$s.table
-# x <- summary(ts_model_list$result[[1]][[3]]$gam)$s.table
-# str(x)
-# x[,4]
+df <- daic %>%
+  select(station_id, Time:Dep_P_T) %>%
+  tidyr::pivot_longer(Time:Dep_P_T, names_to = "Model", values_to = "dAIC") %>%
+  mutate(Model = forcats::fct_inorder(Model))
 
-get_p <- function(model_list){
-  tab1 <- summary(model_list[[1]]$gam)$s.table
-  tab2 <- summary(model_list[[2]]$gam)$s.table
-  tab3 <- summary(model_list[[3]]$gam)$s.table
-  data.frame(year_m1 = tab1[1,4],
-             totn_m2 = tab2[1,4],
-             year_m3 = tab3[2,4],
-             totn_m3 = tab3[1,4])
-}
-# get_p(ts_model_list$result[[1]])
+df_without_time <- daic_without_time %>%
+  select(station_id, Dep:Dep_P_T) %>%
+  tidyr::pivot_longer(Dep:Dep_P_T, names_to = "Model", values_to = "dAIC") %>%
+  mutate(Model = forcats::fct_inorder(Model))
 
-p_values <- ts_model_list$result[model_ok] %>% map_df(get_p, .id = "station_id")
+df %>%
+  filter(dAIC == 0) %>%
+  ggplot(aes(Model)) +
+  geom_histogram(stat = "count") +
+  labs(tilte = "Best model")
+
+df_without_time %>%
+  filter(dAIC == 0) %>%
+  ggplot(aes(Model)) +
+  geom_histogram(stat = "count") +
+  labs(tilte = "Best model, not including the 'time' model")
+
+ggplot(df, aes(Model, dAIC)) +
+  geom_boxplot()
+
+ggplot(df, aes(Model, station_id, fill = dAIC)) +
+  geom_raster()
 
 ```
 
-
-
-Predict
+### Check how often adding climate to deposition improves the model  
+Improves model if the point is under the line  
+- Conclusion: not so often  
 ```{r}
 
-# predict(ts_model_list$result[[1]][[1]]$gam, data.frame(year = 1992:2020))
-# ts_model_list$result[[1]]$years
-
-get_predictions_time <- function(model_list){
-  years <- seq(
-    min(model_list$years),
-    max(model_list$years)
-  )
-  pred <- predict(model_list[[1]]$gam, data.frame(year = years))
-  data.frame(year = years, log_NO3_pred = pred)
-}
-
-# Test
-# get_predictions_time(ts_model_list$result[[1]])
-
-get_increase <- function(model_list){
-  df_pred <- get_predictions_time(model_list)
-  value1 <- df_pred %>%
-    filter(year %in% 1992:1994) %>%
-    pull(log_NO3_pred) %>%
-    mean()
-  value2 <- df_pred %>%
-    filter(year %in% 2014:2016) %>%
-    pull(log_NO3_pred) %>%
-    mean()
-  data.frame(increase = value2 - value1)
-  }
-# test
-# get_increase(ts_model_list$result[[1]])
-
-increase <- ts_model_list$result[model_ok] %>% map_df(get_increase, .id = "station_id")
+ggplot(daic, aes(Dep, Dep_P)) +
+  geom_point() +
+  geom_abline(intercept = 0, slope = 1)
+ggplot(daic, aes(Dep, Dep_T)) +
+  geom_point() +
+  geom_abline(intercept = 0, slope = 1)
+ggplot(daic, aes(Dep, Dep_P_T)) +
+  geom_point() +
+  geom_abline(intercept = 0, slope = 1)
 
 
 ```
 
 
+## 5. Rsq of the regression nitrate as function of deposition (model 2)
 
 
-### Add AIC and p_values to dat_annual
+### Extract R-sq's   
+Models  
+- model 2: effect of deposition on NO3
+- model 8: time trend in deposition   
+```{r}
+
+# summary(result_list[[1]][[2]]$gam)$r.sq
+
+rsq_no3_vs_dep <- result_list %>% 
+  map_dbl(~summary(.[[2]]$gam)$r.sq)
+rsq_dep_vs_time <- result_list %>% 
+  map_dbl(~summary(.[[9]]$gam)$r.sq)
+
+rsq <- tibble(
+  station_id = names(rsq_no3_vs_dep),
+  rsq_no3_vs_dep,
+  rsq_dep_vs_time
+)
+
+# rsq
+
+
+```
+
+### Plot R-sqs   
+Interpretaton:  
+- Upper right = models with strong time trend in deposition and strong effect of deposition on NO3   
+- Lower right = models with strong time trend in deposition but nevertheless small effect of deposition on NO3  
+- Lower left = models with weak time trend in deposition and (for that reason) small effect of deposition on NO3  
+  
+Dotted lines are used in part 6:  
+- time series to the left of vertical dotted line are not used (low variation in deposition)  
+- time series to the right of vertical dotted line: 
+    * R-sq of deposition on NO3 (vertical scale) used in GAM and random forest regression
+    * Classification by horizontal lines used in random forest classification
 
 ```{r}
 
-dat_annual2 <- dat_annual_sel_TOC %>%
-  left_join(aic, by = "station_id") %>%
-  left_join(p_values, by = "station_id") %>%
-  left_join(increase, by = "station_id")
+rsq %>%
+  mutate(
+    rsq_no3_vs_dep = case_when(
+      rsq_no3_vs_dep < 0 ~ 0,
+      rsq_no3_vs_dep >= 0 ~ rsq_no3_vs_dep)
+  ) %>%
+  ggplot(aes(rsq_dep_vs_time, rsq_no3_vs_dep)) + 
+  geom_point() +
+  geom_hline(yintercept = c(0.2, 0.4), linetype = "dashed") +
+  geom_vline(xintercept = 0.7, linetype = "dashed")
   
 
 ```
 
+### Examples
 
-### Change over time
+#### Strong time trend in deposition (Rsq 0.91), strong effect of deposition on NO3 (Rsq 0.64)
+```{r, fig.height=4, fig.width=8}
+
+id <- "38299"
+
+filter(rsq, station_id == id)
+
+par(mfrow = c(1,2), mar = c(4,5,2,1))
+plot(result_list[[id]][[2]]$gam, res = TRUE, pch = 1)
+plot(result_list[[id]][[9]]$gam, res = TRUE, pch = 1)
+
+```
+
+
+#### Strong time trend in deposition (Rsq 0.8), clear but weaker effect of deposition on NO3 (Rsq 0.4) 
+```{r, fig.height=4, fig.width=8}
+
+id <- "38090"
+
+filter(rsq, station_id == id)
+
+par(mfrow = c(1,2), mar = c(4,5,2,1))
+plot(result_list[[id]][[2]]$gam, res = TRUE, pch = 1)
+plot(result_list[[id]][[9]]$gam, res = TRUE, pch = 1)
+
+```
+
+#### Strong time trend in deposition (0.9), little effect of deposition on NO3 (Rsq 0.17)
+```{r, fig.height=4, fig.width=8}
+
+id <- "23478"
+
+filter(rsq, station_id == id)
+
+par(mfrow = c(1,2), mar = c(4,5,2,1))
+plot(result_list[[id]][[2]]$gam, res = TRUE, pch = 1)
+plot(result_list[[id]][[9]]$gam, res = TRUE, pch = 1)
+
+```
+
+#### Weak time trend in deposition (Rsq 0.35), weak effect of deposition on NO3 
+```{r, fig.height=4, fig.width=8}
+
+id <- "38478"
+
+filter(rsq, station_id == id)
+
+par(mfrow = c(1,2), mar = c(4,5,2,1))
+plot(result_list[[id]][[2]]$gam, res = TRUE, pch = 1)
+plot(result_list[[id]][[9]]$gam, res = TRUE, pch = 1)
+
+```
+
+
+
+## 6. What separates stations with little/strong effect of deposition on NO3
+Analysis of time series with relatively strong time trend in deposition   
+
+### Select cases  
 ```{r}
 
-ggplot(dat_annual2, aes(longitude, latitude, color = increase)) +
-  geom_point() +
-  scale_color_gradient2("Change", midpoint = 0) +
-  labs(title = "Change over time (log10 scale)")
+rsq <- rsq %>%
+  mutate(Dep_effect = 
+           case_when(
+             rsq_dep_vs_time < 0.7 ~ "Expected_low",
+             rsq_no3_vs_dep < 0.20 ~ "Low_effect",
+             rsq_no3_vs_dep < 0.40 ~ "Medium_effect",
+             rsq_no3_vs_dep > 0.40 ~ "High_effect")
+  ) %>%
+  mutate(station_id = as.numeric(station_id))
 
-ggplot(dat_annual2, aes(latitude, increase, color = factor(year_m1 <= 0.05))) +
-  geom_point() +
-  scale_color_manual("P < 0.05", values = c("grey20", "red2")) +
-  labs(title = "Change over time (log10 scale)")
+table(rsq$Dep_effect)
 
-ggplot(dat_annual2, aes(altitude, increase, color = factor(year_m1 <= 0.05))) +
-  geom_point() +
-  scale_color_manual("P < 0.05", values = c("grey20", "red2")) +
-  labs(title = "Change over time (log10 scale)")
+```
 
-ggplot(dat_annual2, aes(coniferous, increase, color = factor(year_m1 <= 0.05))) +
-  geom_point() +
-  scale_color_manual("P < 0.05", values = c("grey20", "red2")) +
-  labs(title = "Change over time (log10 scale)")
+### Data   
+  
+Adding mean deposition and mean precipitation + temeprature   
+- Exclude time series with "Expected_low" - i.e., weak time series trends in deposition  
 
-ggplot(dat_annual2, aes(deciduous, increase, color = factor(year_m1 <= 0.05))) +
-  geom_point() +
-  scale_color_manual("P < 0.05", values = c("grey20", "red2")) +
-  labs(title = "Change over time (log10 scale)")
+```{r}
+
+df_deposition_mean <-
+  df_deposition %>% 
+  group_by(station_id) %>% 
+  summarise(Mean_dep = mean(TOTN_dep))
+
+df_climate_mean <- df_climate %>%
+  group_by(station_id, variable) %>% 
+  summarise(mean = mean(value)) %>%
+  tidyr::pivot_wider(names_from = "variable", values_from = "mean", names_prefix = "Mean_")
+
+
+# df_stations %>% filter(is.na(coniferous))
+
+df_stations2 <- df_stations %>%
+  select(station_id, 
+         coniferous, deciduous, lake, mixed_forest, wetland) %>%
+  filter(!is.na(coniferous))
+apply(is.na(df_stations2), 2, sum)
+
+
+data_select <- df_stations2 %>% 
+  left_join(df_deposition_mean, by  = "station_id") %>%
+  left_join(df_climate_mean, by  = "station_id") %>%
+  left_join(rsq, by  = "station_id") %>%
+  # Exclude time series with "Expected_low" - i.e., weak time series trends in deposition
+  filter(Dep_effect %in% c("Low_effect", "Medium_effect", "High_effect") ) %>%
+  select(station_id, Dep_effect, rsq_no3_vs_dep, coniferous:Mean_tmp) %>%
+  mutate(
+    rsq_no3_vs_dep = case_when(
+      rsq_no3_vs_dep < 0 ~ 0,
+      rsq_no3_vs_dep >= 0 ~ rsq_no3_vs_dep),
+    Dep_effect = factor(Dep_effect, 
+                             levels = c("Low_effect", "Medium_effect", "High_effect")
+                             ),
+    coniferous = log(coniferous + 1), deciduous = log(deciduous + 1), lake = log(lake + 1), 
+    mixed_forest = log(mixed_forest + 1), wetland = log(wetland + 1)
+    ) %>%
+  as.data.frame() 
+# %>%
+#   mutate(Dep_effect2 = case_when(
+#     Dep_effect == "Low_effect" ~ 1,
+#     Dep_effect == "Medium_effect" ~ 2,
+#     Dep_effect == "High_effect" ~ 3)
+#   ) %>% 
+#   select(-Dep_effect)
+
+rownames(data_select) <- data_select$station_id
+data_select$station_id <- NULL
+
+# Check missing values 
+apply(is.na(data_select), 2, sum)
+
+# 
+table(addNA(data_select$Dep_effect))
+
+# For making mutate code
+# x1 <- data_select %>% names()
+# x2 <- paste0(
+#   paste0(x, " = "), paste0("log(", x, " + 1)")
+# )
+# x2 %>% paste(collapse = ", ")
 
 
 ```
 
-### Effect of totN_deposition in addition to year  
-Model 3 vs model 2  
-Higher is better
-```{r}
+### Multiple GAM  
 
-dat_annual2 %>%
-  mutate(Effect_deposition = AIC_2 - AIC_3) %>%
-  ggplot(aes(latitude, Effect_deposition)) +
-  geom_point() +
-  geom_hline(yintercept = 0) + geom_hline(yintercept = 2, linetype = 2) + 
-  labs(title = "Effect of deposition after time trends have been substracted (> 2 is a substantial effect)")
 
-dat_annual2 %>%
-  mutate(Effect_deposition = AIC_2 - AIC_3) %>%
-  ggplot(aes(altitude, Effect_deposition)) +
-  geom_point() +
-  geom_hline(yintercept = 0) + geom_hline(yintercept = 2, linetype = 2) + 
-  labs(title = "Effect of deposition after time trends have been substracted (> 2 is a substantial effect)")
+#### Plot 
+```{r, fig.height=7}
 
-dat_annual2 %>%
-  mutate(Effect_deposition = AIC_2 - AIC_3) %>%
-  ggplot(aes(coniferous, Effect_deposition)) +
-  geom_point() +
-  geom_hline(yintercept = 0) + geom_hline(yintercept = 2, linetype = 2) + 
-  labs(title = "Effect of deposition after time trends have been substracted (> 2 is a substantial effect)")
+ggplot(data_select, aes(Dep_effect, rsq_no3_vs_dep)) +
+  geom_boxplot() +
+  geom_jitter()
 
+plot(data_select %>% select(-Dep_effect))
 
 ```
 
-### Effect of TOC in addition to year and totN_deposition   
-Model 7 vs model 6  
-Higher is better
+#### Data
 ```{r}
 
-df <- dat_annual2 %>%
-  mutate(Effect_TOC = AIC_6 - AIC_7)
+data_mumin <- data_select %>% 
+  select(-Dep_effect)
 
-ggplot(df, aes(latitude, Effect_TOC)) +
-  geom_point() +
-  geom_hline(yintercept = 0) + geom_hline(yintercept = 2, linetype = 2) + 
-  labs(title = "Effect of TOC after time trends + deposition have been adjusted for", subtitle = "(> 2 is a substantial effect)")
+# RUN AND SAVED ONLY INTERACTIVELY - because this fails when knitting Rmd documnet
+# saveRDS(data_mumin, "Data/130_data_mumin.rds")
 
-ggplot(df, aes(altitude, Effect_TOC)) +
-  geom_point() +
-  geom_hline(yintercept = 0) + geom_hline(yintercept = 2, linetype = 2) + 
-  labs(title = "Effect of TOC after time trends + deposition have been adjusted for", subtitle = "(> 2 is a substantial effect)")
+```
 
-ggplot(df, aes(coniferous, Effect_TOC)) +
-  geom_point() +
-  geom_hline(yintercept = 0) + geom_hline(yintercept = 2, linetype = 2) + 
-  labs(title = "Effect of TOC after time trends + deposition have been adjusted for", subtitle = "(> 2 is a substantial effect)")
 
+#### Find best models
+```{r}
+
+# For making formula
+# x <- data_select %>% names()
+# paste0("s(", x, ", k = 3)") %>% paste(collapse = " + ")
+
+data_mumin <- readRDS("Data/130_data_mumin.rds")
+
+# Check for NAs
+# apply(is.na(data_mumin), 2, sum)
+
+# Check mean values
+# apply(data_mumin, 2, mean)
+
+mod_complete <- gam(rsq_no3_vs_dep ~ 
+             s(coniferous, k = 3) + s(deciduous, k = 3) + s(lake, k = 3) + 
+             s(mixed_forest, k = 3) + s(wetland, k = 3) + 
+             s(Mean_dep, k = 3) + s(Mean_pre, k = 3) + s(Mean_tmp, k = 3), 
+           data = data_mumin,
+           na.action = "na.fail")
+# RUN AND SAVED ONLY INTERACTIVELY - because this fails when knitting Rmd documnet
+# summary(mod_complete)
+# dd <- dredge(mod_complete)
+# saveRDS(dd, "Data/130_mumin_object.rds")
+dd <- readRDS("Data/130_mumin_object.rds")
+
+```
+
+#### Best models
+```{r}
+
+subset(dd, delta < 2)
+
+```
+
+#### Plot 3 best models  
+PLus ANOVA table for best model;  
+```{r, fig.width=9, fig.height = 7}
+#'Best' models
+
+# RUN AND SAVED ONLY INTERACTIVELY - because this fails when knitting Rmd documnet
+# best_models <- list(
+#   get.models(dd, 1)[[1]],
+#   get.models(dd, 2)[[1]],
+#   get.models(dd, 3)[[1]]
+# )
+# saveRDS(best_models, "Data/130_best_models.rds")
+best_models <- readRDS("Data/130_best_models.rds")
+
+summary(best_models[[1]])$s.table
+
+par(mfrow = c(3,4), mar = c(4,5,2,1))
+plot(best_models[[1]], res = TRUE, pch = 1)
+par(mfg = c(2,1))
+plot(best_models[[2]], res = TRUE, pch = 1)
+par(mfg = c(3,1))
+plot(best_models[[3]], res = TRUE, pch = 1)
+
+```
+
+
+
+### Random forest, classification
+
+#### Split into training and validation data
+```{r}
+
+# data_select$Dep_effect2 <- as.factor(data_select$Dep_effect2)
+
+set.seed(123)
+
+x <- runif(nrow(data_select))
+train <- ifelse(x < 0.8, TRUE, FALSE)
+
+train_set <- data_select[train,] %>% select(-rsq_no3_vs_dep)
+valid_set <- data_select[!train,] %>% select(-rsq_no3_vs_dep) 
+
+```
+
+#### Analysis
+```{r}
+
+model1 <- randomForest(Dep_effect ~ ., 
+                       data = train_set, 
+                       mtry = 4,
+                       importance = TRUE)
+
+model1
+
+```
+
+#### Predict on training data
+```{r}
+
+# Predicting on train set
+pred_valid <- predict(model1, valid_set, type = "class")
+# Checking classification accuracy
+table(pred_valid, valid_set$Dep_effect)  
+
+```
+
+#### Importance  
+High MeanDecreaseGini = high importance in model  
+```{r}
+
+randomForest::importance(model1)
+varImpPlot(model1)
+
+```
+
+### Random forest, regression  
+
+#### Split into training and validation data
+```{r}
+
+# data_select$Dep_effect2 <- as.factor(data_select$Dep_effect2)
+
+set.seed(123)
+
+x <- runif(nrow(data_select))
+train <- ifelse(x < 0.8, TRUE, FALSE)
+
+train_set <- data_select[train,] %>% select(-Dep_effect)
+valid_set <- data_select[!train,] %>% select(-Dep_effect) 
+
+```
+
+#### Analysis
+```{r}
+
+model2 <- randomForest(rsq_no3_vs_dep ~ ., 
+                       data = train_set, 
+                       mtry = 4,
+                       importance = TRUE)
+
+model2
+
+```
+
+#### Importance
+High MeanDecreaseGini = high importance in model  
+```{r}
+
+randomForest::importance(model2)
+varImpPlot(model2)
 
 ```
 
